# CFD-EC2-Monitor

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  run_ec2_ps.sh  start_zcsvs.sh
src/: aws.rs  error.rs  eta.rs  lib.rs  main.rs  report.rs  ssh.rs  types.rs
