[package]
name = "ec2_monitor"
version = "0.1.0"
edition = "2024"
description = "AWS EC2 monitoring tool for computational simulation jobs"
license = "MIT"
repository = "https://github.com/rconan/ec2_monitor"
authors = ["Rod Conan <rconan@gmto.org>"]

[lib]
name = "ec2_monitor"
path = "src/lib.rs"

[[bin]]
name = "ec2_monitor"
path = "src/main.rs"

[dependencies]
aws-config = "1.1"
aws-sdk-ec2 = "1.14"
chrono = "0.4.41"
ssh2 = "0.9"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
